# aprendizaje-chtb-cbmm

./: .env.example  .gitignore  README.md  alembic.ini  app.py  comandos_utiles.md  docker-compose.postgres.yml  docker-compose.yml  index_documents.py  pyproject.toml  rag_test.py  requirements.txt  search_documents.py  test_api.py
admin-ui/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
configs/: cbmm.legacy.yaml  cbmm.yaml
docs/: FASE_1A_CRAWLER_ESTADOS.md  FASE_1B_RESTAURACION_ESTADOS.md  FASE_1C1_HIGIENE_CANDIDATOS.md  FASE_1C2_INTERACCIONES_ESTABLES.md  FASE_1C_REGIONES_TITULOS_FIRMAS.md  FASE_1D1_ESTABILIDAD_RESTAURACION.md  FASE_1D_PROFUNDIDAD_LOCAL.md  FASE_3A_MODELO_CANONICO.md  FASE_3B_POSTGRESQL_REVISION.md  FASE_3C_NEO4J_PROJECTION.md
knowledge/: bodega_egreso.txt  bodega_ingresos.txt  bodega_inventario.txt  bodega_kardex.txt  bodega_material.txt  incidencias.txt
migrations/: env.py
scripts/: ask_hybrid.py  audit_event_policy.py  audit_generalization.py  bootstrap_neo4j.py  build_canonical_knowledge.py  crawl_profile.py  database_common.py  database_status.py  extract_after_login.py  generate_screen_purpose_proposal.py  import_canonical_to_postgres.py  inspect_canonical_knowledge.py  inspect_event_plan.py  inspect_login.py  inspect_menu.py  inspect_neo4j_projection.py  inspect_postgres_knowledge.py  inspect_screen_quality.py  inspect_state_flow.py  inspect_ui_event_results.py  neo4j_common.py  neo4j_status.py  run_api.py  (+11 more)
(+758 files in other folders)
