[project]
name = "aprendizaje-chtb-cbmm"
version = "0.1.0"
description = "Asistente inteligente ERP para el Cuerpo de Bomberos Municipal de Machala"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "postgresql: pruebas de integración que requieren TEST_DATABASE_URL",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []
